--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Projeto resultado da Semana Omnistack #10",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.js"
+    "start": "node ./src/index.js"
   },
   "repository": {
     "type": "git",
